<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailMovieActivity"
    tools:showIn="@layout/activity_detail_movie">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:layout_marginTop="10dp"
                android:id="@+id/poster"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/title"
                tools:text="Title"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/poster"
                android:layout_margin="10dp"
                android:textAlignment="center" />

            <LinearLayout
                android:id="@+id/data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:orientation="horizontal"
                android:padding="0dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/lblRating"
                        android:textSize="15sp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/colorAccent"
                        android:text="@string/label_rating"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/rating"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/lblRating"
                        android:textAlignment="center" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/lblAdult"
                        android:textSize="15sp"
                        android:textColor="@color/colorAccent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/label_adult"
                        android:textAlignment="center" />


                    <TextView
                        android:id="@+id/adult"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/lblAdult"
                        android:textAlignment="center" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/lblLanguage"
                        android:textSize="15sp"
                        android:textColor="@color/colorAccent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/label_language"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/language"
                        android:layout_below="@+id/lblLanguage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAlignment="center" />

                </RelativeLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/lblGenres"
                android:textSize="15sp"
                android:textColor="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/data"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/label_genres" />

            <TextView
                android:id="@+id/genres"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/lblGenres"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/label_loading" />

            <TextView
                android:id="@+id/lblRelease"
                android:textColor="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/genres"
                android:layout_marginBottom="5dp"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/label_release" />

            <TextView
                android:id="@+id/release"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/lblRelease"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp" />

            <TextView
                android:id="@+id/lblOverview"
                android:textColor="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="15sp"
                android:layout_below="@+id/release"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/label_overview" />

            <TextView
                android:id="@+id/overview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/lblOverview"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp" />

        </RelativeLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>